fixed z-index bug after searching

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -18,6 +18,6 @@
 
 .row .col.m0 {
     width: 0;
-    height: 0 !important;
+    height: 0;
     padding: 0;
 }
